# emailfetch

./: .gitignore  Dockerfile  Dockerfile.amazonlinux  Dockerfile.ubuntu  Makefile.am  README.md  add_feed.py  build.sh  configure.ac  docker-run.sh  email-fetch-efs-ecs-cluster.json  emailfetch_config_spec.docx  jenkins_build.sh
cfg/: .gitignore  emailfetch.json  fastemail_config.json  mail.json  tmail.json
docker/: .gitignore  Makefile.am  docker-build.sh
python/: add_feed.py  fastemail.py  fastemail_REST.py  fe_test.py
src/: .gitignore  CurlPoster.cpp  CurlPoster.h  Downloader.cpp  Downloader.h  EmailExtractor.cpp  EmailExtractor.h  EmailFetcherConfig.cpp  EmailFetcherConfig.h  EmailFetcherMain.cpp  EmailForwarderFormatter.cpp  EmailForwarderFormatter.h  Formatter.cpp  Formatter.h  MailFormatter.cpp  MailFormatter.h  MaildirDownloader.cpp  MaildirDownloader.h  MaildirFormatter.cpp  MaildirFormatter.h  Makefile.am  S3Get.cpp  S3Get.h  SMTPSender.cpp  SMTPSender.h  UCDPCurlPoster.cpp  UCDPCurlPoster.h  UCDPEmailExtractor.cpp  UCDPEmailExtractor.h  UCDPFormatter.cpp  UCDPFormatter.h
