AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
if DOCKER
DOCKERSRC=docker
else
DOCKERSRC= 
endif

if UBUNTU
DOCKEREXT=ubuntu
else
DOCKEREXT=amazonlinux
endif

if AWSSDKPATH_NOT_SET
AWS_SDK_PATH=/usr/local
else
AWS_SDK_PATH=$(AWSSDKPATH)
endif

if AWSLIB64
AWS_LIBDIR=lib64
else
AWS_LIBDIR=lib
endif

export AWS_SDK_PATH
export AWS_LIBDIR
export DOCKEREXT

SUBDIRS = src $(DOCKERSRC)
